force-app/main/default/objects/Service_Request__c/recordTypes/Emergency.recordType-meta.xml
<RecordType>
    <fullName>Emergency</fullName>
    <active>true</active>
    <description>Represents urgent service requests requiring immediate attention.</description>
    <label>Emergency</label>
</RecordType>