force-app/main/default/objects/Service_Request__c/recordTypes/Inspection.recordType-meta.xml
<RecordType>
    <fullName>Inspection</fullName>
    <active>true</active>
    <description>Represents requests for inspection services.</description>
    <label>Inspection</label>
</RecordType>