force-app/main/default/objects/Service_Request__c/recordTypes/Installation.recordType-meta.xml
<RecordType>
    <fullName>Installation</fullName>
    <active>true</active>
    <description>Represents requests for installation services.</description>
    <label>Installation</label>
</RecordType>