force-app/main/default/objects/Service_Request__c/recordTypes/Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Maintenance</fullName>
    <active>true</active>
    <description>Represents requests for maintenance services.</description>
    <label>Maintenance</label>
</RecordType>