force-app/main/default/objects/Service_Request__c/validationRules/Completed_Request_Requires_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Request_Requires_Description</fullName>
    <active>true</active>
    <description>Requires a description when the service request is completed.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Completed&quot;), ISBLANK(Description__c))</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>A completed request must contain a description.</errorMessage>
</ValidationRule>