force-app/main/default/objects/Service_Request__c/validationRules/Critical_Request_Requires_Due_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Critical_Request_Requires_Due_Date</fullName>
    <active>true</active>
    <description>Requires a due date for critical service requests.</description>
    <errorConditionFormula>AND(ISPICKVAL(Priority__c, &quot;Critical&quot;), ISBLANK(Due_Date__c))</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Critical requests require a due date.</errorMessage>
</ValidationRule>