force-app/main/default/objects/Service_Request__c/validationRules/Due_Date_Cannot_Be_In_The_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_Cannot_Be_In_The_Past</fullName>
    <active>true</active>
    <description>Prevents users from selecting a due date earlier than today.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Due_Date__c)), Due_Date__c &lt; NOW())</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Due Date cannot be earlier than today.</errorMessage>
</ValidationRule>