force-app/main/default/objects/Service_Request__c/validationRules/Estimated_Cost_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Estimated_Cost_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Prevents negative estimated costs.</description>
    <errorConditionFormula>Estimated_Cost__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Estimated_Cost__c</errorDisplayField>
    <errorMessage>Estimated Cost must be greater than or equal to zero.</errorMessage>
</ValidationRule>